--- a/src/scss/tech.section.scss
+++ b/src/scss/tech.section.scss
@@ -1,8 +1,7 @@
 section:is(#tech-stack) {
   ul.primary-tech {
     width: 100%;
-    padding: 10vmin;
-    padding-bottom: 5vmin;
+    padding: 5vmin 10vmin;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
