--- a/src/style.scss
+++ b/src/style.scss
@@ -39,6 +39,7 @@ h6 {
 
 small {
   font-size: 0.8em;
+  max-inline-size: unset;
 }
 
 h1 {
